replaced autorankResult with autorankReport

--- a/files/main.tex
+++ b/files/main.tex
@@ -26,7 +26,7 @@ We have benefited this library to compare different countries worldwide in terms
 \chapter{Graphs}
 \section{autorank Graph}
 In this section we see the autorank plot
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\textwidth]{autorank.png}
     \caption{autorank plot}
@@ -35,15 +35,15 @@ In this section we see the autorank plot
 
 \section{matplotlib Garaph}
  In this section we see the top countries plot
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\textwidth]{TopCountries.png}
     \caption{Countries with highest rate of new \textit{Covid-19} detected cases}
     \label{fig:TopCountries}
 \end{figure}
+
 \chapter{autorank Reports}
- \verbatiminput{autorankResult.txt}
- 
+ \verbatiminput{autorankReport.txt}
  \begin{abstract}
   autorank is a simple Python package with one task: simplify the comparison between (multiple) paired populations. This is, for example, required if the performance different machine learning algorithms or simulations should be compared on multiple data sets. The performance measures on each data set are then the paired samples, the difference in the central tendency (e.g., the mean or median) can be used to rank the different algorithms. In \ref{fig:autorank} you can see one output sample of this library
  \end{abstract}
