--- a/files/main.tex
+++ b/files/main.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \usepackage{verbatim}
 \graphicspath{{images/}}
+\usepackage{url}
 
 \title{\textbf{autorank}}
 \author{Mohammad Sorkhian}
@@ -47,4 +48,19 @@ In this section we see the autorank plot
  \begin{abstract}
   autorank is a simple Python package with one task: simplify the comparison between (multiple) paired populations. This is, for example, required if the performance different machine learning algorithms or simulations should be compared on multiple data sets. The performance measures on each data set are then the paired samples, the difference in the central tendency (e.g., the mean or median) can be used to rank the different algorithms. In \ref{fig:autorank} you can see one output sample of this library
  \end{abstract}
+ 
+@article{Herbold2020,
+  doi = {10.21105/joss.02173},
+  url = {\url{https://doi.org/10.21105/joss.02173}},
+  year = {2020},
+  publisher = {The Open Journal},
+  volume = {5},
+  number = {48},
+  pages = {2173},
+  author = {Steffen Herbold},
+  title = {Autorank: A Python package for 
+  automated ranking of classifiers},
+  journal = {Journal of Open Source Software}
+}
+
  \end{document}
